--- a/assets/shared-styles/artist-page.sm.css
+++ b/assets/shared-styles/artist-page.sm.css
@@ -29,7 +29,6 @@
 
     .artist-social-icons {
         gap: 30px;
-        margin: 0;
     }
 
     .artist-social-icons a img {
